--- a/style.css
+++ b/style.css
@@ -16,15 +16,20 @@ body{
     background-position:center;
     background-repeat: no-repeat;
     background-attachment:fixed ;
-    height:100%;
+    /* height:100%; */
+    /* background-color: white; */
 
     
     
 }
 h1{
     text-align: center;
+    font-size:80px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .container{
+    background-color: rgb(216, 244, 246);
+    opacity:0.8;
     width:80vh;
     height:50vh;
     margin:2px;
@@ -35,5 +40,14 @@ h1{
     justify-content: center;
     justify-items: space-evenly;
     align-items: start;
-    border:solid black 2px;
+    
+}
+
+table{
+    opacity:1;
+    font-weight:bold;
+}
+.csvFile{
+    /* text-align:center; */
+
 }
