--- a/app/static/style.css
+++ b/app/static/style.css
@@ -11,12 +11,12 @@
 body{
     margin:0;
     padding:0;
-    background-image:url("/images/Designer.jpeg") ;
+    background-image:url("images/Designer.jpeg") ;
     background-size: cover;
     background-position:center;
     background-repeat: no-repeat;
     background-attachment:fixed ;
-    /* height:100%; */
+    /*height:100%; */
     /* background-color: white; */
 
     
@@ -47,7 +47,8 @@ table{
     opacity:1;
     font-weight:bold;
 }
-.csvFile{
-    /* text-align:center; */
 
-}
+/* .csvFile{
+     text-align:center; 
+
+}*/
