--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealthCare</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+        .pred-center {
+            text-align: center;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body >
     <h1 >Heart Disease</h1>
