--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,55 +15,49 @@
                 <table class="table">
                     <tr>
                         <td>age</td>
-                        <td class="td"><input type="number" name="age"></td>
+                        <td class="td"><input type="number" name="age" required></td>
                     
                         <td>sex</td>
-                        <td class="td"><input type="number" name="sex"></td>
+                        <td class="td"><input type="number" name="sex" required></td>
                     </tr>
                     <tr>
                         <td>cp</td> 
-                        <td class="td"><input type="number" name="cp"></td>
+                        <td class="td"><input type="number" name="cp" required></td>
                     
                         <td> trestbps</td> 
-                        <td class="td"><input type="number" name="trestbps"></td>
+                        <td class="td"><input type="number" name="trestbps" required></td>
                     </tr>
                     <tr> 
                         <td>chol</td>
-                        <td class="td"><input type="number" name="chol"></td>
+                        <td class="td"><input type="number" name="chol" required></td>
                         <!-- <td></td> -->
                         <td>fbs</td>
-                        <td class="td"><input type="number" name="fbs"></td>
+                        <td class="td"><input type="number" name="fbs" required></td>
                     </tr>
                     <tr>
                         <td>restecg</td>
-                        <td class="td"><input type="number" name="restecg"></td>
+                        <td class="td"><input type="number" name="restecg" required></td>
                     
                         <td>thalach</td>
-                        <td class="td"><input type="number" name="thalach"></td>
+                        <td class="td"><input type="number" name="thalach" required></td>
                     </tr>
                     <tr>
                         <td>exang</td>
-                        <td class="td"><input type="number" name="exang"></td>
+                        <td class="td"><input type="number" name="exang" required></td>
                     
                         <td>oldpeak</td>
-                        <td class="td"><input type="number" name="oldpeak" step= "any"></td>
+                        <td class="td"><input type="number" name="oldpeak" step= "any" required></td>
                     </tr>
                     <tr>
                         <td>slope</td>
-                        <td class="td"><input type="number" name="slope"></td>
+                        <td class="td"><input type="number" name="slope" required></td>
                     
                         <td>ca</td>
-                        <td class="td"><input type="number" name="ca"></td>
+                        <td class="td"><input type="number" name="ca" required></td>
                     </tr>
                     <tr>
                         <td>thal</td>
-                        <td class="td"><input type="number" name="thal"></td>
-                    </tr>
-                    
-                    
-                    <tr class="csvFile">
-                        <td>FILE INPUT</td>
-                        <td><input type="file"></td>
+                        <td class="td"><input type="number" name="thal" required></td>
                     </tr>
 
                     <tr>
