--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,7 +18,7 @@ body{
     background-attachment:fixed ;
     /*height:100%; */
     /* background-color: white; */
-    
+
 }
 h1{
     text-align: center;
@@ -47,7 +47,8 @@ table{
 }
 
 .button{
-    padding:5rem;
-    margin:5rem;
+    padding:1rem;
+    margin:1rem;
     align-items: center;
+    align-self: center;
 }
