--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,49 +15,49 @@
             <form action = "/predict" method = "post">
                 <table class="table">
                     <tr>
-                        <td>age</td>
+                        <td>Age</td>
                         <td class="td"><input type="number" name="age" required></td>
                     
-                        <td>sex</td>
+                        <td>Sex</td>
                         <td class="td"><input type="number" name="sex" required></td>
                     </tr>
                     <tr>
-                        <td>cp</td> 
+                        <td>CP</td> 
                         <td class="td"><input type="number" name="cp" required></td>
                     
-                        <td> trestbps</td> 
+                        <td> Trestbps</td> 
                         <td class="td"><input type="number" name="trestbps" required></td>
                     </tr>
                     <tr> 
-                        <td>chol</td>
+                        <td>Chol</td>
                         <td class="td"><input type="number" name="chol" required></td>
                         <!-- <td></td> -->
-                        <td>fbs</td>
+                        <td>FBS</td>
                         <td class="td"><input type="number" name="fbs" required></td>
                     </tr>
                     <tr>
-                        <td>restecg</td>
+                        <td>Restecg</td>
                         <td class="td"><input type="number" name="restecg" required></td>
                     
-                        <td>thalach</td>
+                        <td>Thalach</td>
                         <td class="td"><input type="number" name="thalach" required></td>
                     </tr>
                     <tr>
-                        <td>exang</td>
+                        <td>Exang</td>
                         <td class="td"><input type="number" name="exang" required></td>
                     
-                        <td>oldpeak</td>
+                        <td>Oldpeak</td>
                         <td class="td"><input type="number" name="oldpeak" step= "any" required></td>
                     </tr>
                     <tr>
-                        <td>slope</td>
+                        <td>Slope</td>
                         <td class="td"><input type="number" name="slope" required></td>
                     
-                        <td>ca</td>
+                        <td>Ca</td>
                         <td class="td"><input type="number" name="ca" required></td>
                     </tr>
                     <tr>
-                        <td>thal</td>
+                        <td>Thal</td>
                         <td class="td"><input type="number" name="thal" required></td>
                     </tr>
                         
