--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,13 +62,13 @@
                     </tr>
                         
 
-                    <tr>
+                    <tr class='buttoTr' colspan="2" >
                         <td><button type="submit" class="button">PREDICT</button></td>
                     </tr>
 
                     <tr>
                         <br>
-                        <td style="color:rgb(3, 251, 148); ">{{pred}}<td>
+                        <td style="color:black; ">{{pred}}<td>
                         <br>
                     </tr>
 
