--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,9 +14,9 @@
 
 </head>
 <body >
-    <h1 >Heart Disease</h1>
+    <h1 >CardioSPECTION </h1>
     <div class="wrapper">
-        <!-- <h1>HeartDisease</h1> -->
+        
         <div class="container">
             <form action = "/predict" method = "post">
                 <table class="table">
